Add new methods for finding tables/FK/IX/AK
Current approach has problem with performance - for each table there is a query db made
This methods will be used to new algorithm which reads all db info and runs just few sql commands

--- a/OwnDataSpaces/OwnDataSpaces.csproj
+++ b/OwnDataSpaces/OwnDataSpaces.csproj
@@ -12,6 +12,9 @@
             <HintPath>..\..\..\..\..\Program Files\dotnet\shared\Microsoft.AspNetCore.App\7.0.9\Microsoft.Extensions.DependencyInjection.Abstractions.dll</HintPath>
         </Reference>
     </ItemGroup>
+    <ItemGroup>
+        <InternalsVisibleTo Include="$(AssemblyName).SqlServer.Tests"/>
+    </ItemGroup>
 
     <ItemGroup>
         <PackageReference Include="Dapper" Version="2.0.143" PrivateAssets="compile" />
