Add middleware setting up logging context

--- a/OwnDataSpaces/OwnDataSpaces.csproj
+++ b/OwnDataSpaces/OwnDataSpaces.csproj
@@ -8,20 +8,20 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <Reference Include="Microsoft.Extensions.DependencyInjection.Abstractions">
-            <HintPath>..\..\..\..\..\Program Files\dotnet\shared\Microsoft.AspNetCore.App\7.0.9\Microsoft.Extensions.DependencyInjection.Abstractions.dll</HintPath>
-        </Reference>
+        <FrameworkReference Include="Microsoft.AspNetCore.App"/>
     </ItemGroup>
+
     <ItemGroup>
         <InternalsVisibleTo Include="$(AssemblyName).SqlServer.Tests"/>
     </ItemGroup>
 
     <ItemGroup>
-        <PackageReference Include="Dapper" Version="2.0.143" PrivateAssets="compile" />
-        <PackageReference Include="Microsoft.AspNetCore.Http" Version="2.2.2" PrivateAssets="compile" />
-        <PackageReference Include="Microsoft.Data.SqlClient" Version="5.1.1" PrivateAssets="compile" />
-        <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="7.0.9" PrivateAssets="compile" />
-        <PackageReference Include="Npgsql" Version="7.0.4" />
+        <PackageReference Include="Dapper" Version="2.0.143" PrivateAssets="compile"/>
+        <PackageReference Include="Microsoft.AspNetCore.Http" Version="2.2.2" PrivateAssets="compile"/>
+        <PackageReference Include="Microsoft.Data.SqlClient" Version="5.1.1" PrivateAssets="compile"/>
+        <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="7.0.9" PrivateAssets="compile"/>
+        <PackageReference Include="Microsoft.Extensions.Hosting" Version="7.0.0" PrivateAssets="compile"/>
+        <PackageReference Include="Npgsql" Version="7.0.4"/>
     </ItemGroup>
 
 </Project>
